# gb_ws2

./: .gitignore  PHASE9_FINAL_REPORT.md  analyze_cloud.py  check_both.py  check_box.py  check_cloud_range.py  check_dog.py  check_obstacle.py  check_raw.py  check_scan.py  check_stop.py  check_where.py  check_where2.py  decode_points.py  dump_cloud.py  frames_2026-06-23_11.43.23.gv  frames_2026-06-24_16.37.05.gv  phase2_retest.sh  phase2_test.py  stand_test.py  start.sh  start_adapter.sh  start_base_driver.sh  start_nav.sh  start_phase2.sh  test_path.py
scripts/: check_front.py  deploy_startup.sh  gb-full-chain.service  gb-ip-setup.service  gb_full_chain.sh  gb_setup_ip.sh  gosdk-watchdog.service  gosdk_watchdog.sh  install_nav2_deps.sh  restart_amcl.sh  save_map.py  save_map2.py  save_map3.py  save_map4.py  set_amcl_pose.sh  start_lidar_fastlio.sh
src/fast_lio_gpu/: README.md
src/fast_lio_gpu/launch/: mapping.launch.py
src/fast_lio_gpu/rviz/: fastlio.rviz
src/fast_lio_gpu/scripts/: fastlio_path_publisher.py
src/fast_lio_gpu/src/: laserMapping.cpp  preprocess.cpp  preprocess.h
src/fastlio2/: CMakeLists.txt
src/fastlio2/config/: lio.yaml  mid360_fastlio.yaml
src/fastlio2/launch/: lio_launch.py
src/fastlio2/src/: lio_node.cpp
src/gb_base_driver/: README.md  package.xml  setup.cfg  setup.py
src/gb_base_driver/config/: base_driver.yaml
src/gb_base_driver/gb_base_driver/: base_driver_node.py  real_base_adapter.py  zenoh_readonly_adapter.py
src/gb_base_driver/launch/: base_driver.launch.py  real_adapter.launch.py
src/gb_bringup/: README.md  package.xml  setup.cfg  setup.py
src/gb_bringup/config/: nav2_params.yaml
src/gb_bringup/launch/: gb_perception.launch.py  nav2.launch.py  nav2_minimal.launch.py  navigation.launch.py
src/gb_description/: CMakeLists.txt  README.md  package.xml
src/gb_description/config/: frames.yaml
src/gb_description/launch/: description.launch.py
src/gb_description/rviz/: gb_map_view.rviz
src/gb_description/urdf/: gb_dog.urdf.xacro
src/gb_lio/: README.md  package.xml  setup.cfg  setup.py
src/gb_lio/config/: mid360_fastlio.yaml
src/gb_lio/gb_lio/: icp_localization.py  lio_odom_2d_projector.py
src/gb_lio/launch/: fastlio.launch.py  odom_2d.launch.py
src/gb_mapping/: README.md  package.xml  setup.cfg  setup.py
src/gb_mapping/config/: mapper_params_async.yaml  mapper_params_localization.yaml
src/gb_mock_base/: package.xml  setup.cfg  setup.py
src/gb_nav2/: README.md  package.xml  setup.cfg  setup.py
src/gb_nav2/config/: amcl_params.yaml  collision_monitor.yaml  collision_monitor_93.yaml  collision_monitor_test.yaml  collision_monitor_test_stop.yaml
src/gb_nav2/launch/: collision_monitor.launch.py  localization.launch.py  slam_localization.launch.py
src/gb_perception/: README.md  package.xml  setup.cfg  setup.py
src/gb_perception/config/: points_filter.yaml  points_filter_tf_only.yaml
src/gb_perception/gb_perception/: points_filter_node.py  points_filter_node.py.bak  test_obstacle_cloud_node.py
src/gb_perception/launch/: perception.launch.py  test_obstacle_cloud.launch.py
src/gb_safety/: README.md  package.xml  setup.cfg  setup.py
src/gb_safety/config/: safety.yaml
src/gb_safety/gb_safety/: safety_node.py
src/gb_safety/launch/: safety.launch.py
src/gb_web/: README.md  package.xml  setup.cfg  setup.py
src/gb_web/gb_web/: gb_web_node.py  gb_web_node.py.bak
src/gb_web/launch/: gb_web.launch.py
src/gb_web/www/: index.html  index.html.bak  index_old.html
src/livox_ros_driver2/config/: MID360_config.json
src/robots_dog_msgs/: CMakeLists.txt  package.xml
src/robots_dog_msgs/action/: ComputePathThroughPoses.action  ComputePathToPose.action  ComputePathsToPoses.action  FollowWaypoints.action  NavigateThroughPoses.action  NavigateToPose.action
src/robots_dog_msgs/msg/: ArcChangeFlag.msg  ArcModuleCmd.msg  ArcModuleState.msg  ArcMultiStageCtrlCmd.msg  ArcState.msg  ArcTargetPose.msg  DockPoseStamped.msg  DockState.msg  LocalMap.msg  LocalizationState.msg  McModeCmd.msg  McState.msg  NavigationCmd.msg  NavigationState.msg  PathScoreBreakdown.msg  PathSelectionSummary.msg  PathSelectorWeights.msg  PathWithScore.msg  PerceptionPoints.msg  PerceptionState.msg  PredictedPose.msg  RadarPoint2D.msg  RadarRaw2D.msg  SlamState.msg  SrvEvent.msg  StartArc.msg  StartNavigation.msg  StaticMapState.msg  UniRtkPvh.msg
src/robots_dog_msgs/srv/: BuildMap2D.srv  BuildMap3D.srv  GetESDFMap.srv  GetMapState.srv  IsPathValid.srv  MapState.srv  QueryPileResult.srv
